<resources>
    <string name="app_name">ProyectoUno</string>
    <string name="nombre">Piotrek Budzowski</string>
    <string name="sync_now">Sync Now</string>
    <string name="manage_sync_list">Manage sync list</string>
    <string name="clear_sync_list">Clear sync list</string>
    <string name="run_as_service">Run as service</string>
    <string name="set_service_run_interval_hours">Set service run interval (hours)</string>
    <string name="send_to_background_when_starting_syncing">Send to background when starting syncing</string>
    <string name="hipotenusa">Hipotenusa</string>
    <string name="pulsa">Pulsa</string>
    <string name="introduce_el_otro_cateto">Introduce el otro cateto</string>
    <string name="introduce_un_cateto">Introduce un cateto</string>
    <string name="_5_0">5.0</string>
    <string name="volver">Volver</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="camera">Camera</string>
    <string name="foto">Foto:</string>
    <string name="cerca_del_cerro">cerca del cerro</string>
    <string name="descripcion">Descripcion:</string>
    <string name="nombre2">Nombre:</string>
    <string name="_23_08_2012">23-08-2012</string>
    <string name="fecha">Fecha:</string>
    <string name="_1_037996">-1.037996</string>
    <string name="longitud">Longitud:</string>
    <string name="_37_609063">37.609063</string>
    <string name="editar_un_lugar">Editar un Lugar</string>
    <string name="latitud">Latitud:</string>
</resources>