<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="383dp"
        android:layout_height="38dp"
        android:text="@string/editar_un_lugar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="237dp"
            android:layout_height="71dp"
            android:layout_weight="1"
            android:text="@string/latitud" />

        <TextView
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/_37_609063" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:text="@string/longitud" />

        <TextView
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/_1_037996" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/fecha" />

        <TextView
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/_23_08_2012" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="94dp"
            android:layout_weight="1"
            android:text="@string/nombre2" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="74dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descripcion" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerca_del_cerro" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="207dp"
                android:layout_height="203dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="185dp"
                    android:layout_height="125dp"
                    android:layout_weight="1"
                    android:text="@string/foto" />

                <Button
                    android:layout_width="132dp"
                    android:layout_height="107dp"
                    android:text="@string/camera" />

            </LinearLayout>

            <ImageView
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guardar" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eliminar" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/volver" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

</LinearLayout>